To Fix: no linking on mobile..
Tried Meteor Fastclick and different variations of buttons, but found the issue lay with the search for parent tag function. Will test later when I have a cable, but duplicated tags and seem to have a working solution for mobile

--- a/Profile/client/styles/Imports/HtmlElements.import.styl
+++ b/Profile/client/styles/Imports/HtmlElements.import.styl
@@ -54,7 +54,7 @@ a.unstyled
 p.button
   padding-bottom 10px
 
-a.button
+button
   color light
   // font-weight: bold
   border none
@@ -67,5 +67,5 @@ a.button
   border-radius: 4px
   background-color: #5499C7
   box-shadow: 0px 2px 0px 0px #154360
-a.button:hover
+button:hover
   background-color: #154360
